# python-fit-encode

./: .gitignore  README.md  fitencode.py  fitserialize.py  setup.cfg
fitencode/: __init__.py  fields.py  messages.py
tests/: test_changing_list_size.py  test_fitencode.py
