[metadata]
name = fit-encode
version = 0.0.1
description =  Python library for ANT/Garmin .FIT file encode.
long_description = file: README.md
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
author = Hiroyuki OYAMA
author_email = oyama@sportsengineering.co.jp

[options]
package_dir=
    = .
packages=find:
include_package_data = False

[options.packages.find]
where=.
